# deplatformer-webapp

./: .gitignore  BUILDME.md  README.md  package-lock.json  package.json  pyproject.toml  run.linux.spec  run.py  run.spec  run.windows.spec  serverless.yml  testpow.py
deplatformer-electron/: forge.config.js  package-lock.json  package.json
deplatformer-electron/src/: index.js
deplatformer_webapp/: app.py  cli.py  config.py  scripts.py
deplatformer_webapp/crypto/: __init__.py  exceptions.py
deplatformer_webapp/forms/: facebook_forms.py
deplatformer_webapp/helpers/: __init__.py  db.py  facebook_helpers.py  filecoin_helpers.py  helpers.py  ipfs.py  media_helpers.py  mediafile_helpers.py
deplatformer_webapp/lib/: ipfshttpclient-0.7.0a1-py3-none-any.whl  tusfilter.py
deplatformer_webapp/migrations/: env.py
deplatformer_webapp/migrations/versions/: 02a83489873d_.py  127f5a5a0dab_.py  3e88b560dad5_.py  56f1339d6e2a_.py  7e2b4a574825_.py  8361223c60ab_.py  ba31b9b197c0_.py  c59b91455b84_.py  ee7c53956893_.py
deplatformer_webapp/models/: facebook.py  filecoin_models.py  media.py  user_models.py
deplatformer_webapp/services/: fms_service.py  ipfs.py
deplatformer_webapp/static/css/: style.css
deplatformer_webapp/templates/: base.html  base_public.html  help.html  homepage.html
deplatformer_webapp/templates/facebook/: facebook-album.html  facebook-deplatform.html  facebook-manage.html  facebook-memories.html  facebook-upload.html  facebook-view.html
deplatformer_webapp/templates/filecoin/: filecoin-files.html  filecoin-wallets.html
deplatformer_webapp/templates/flask_user/: _public_base.html
deplatformer_webapp/templates/media/: image.html  media-album.html  media-view.html  media_view.html  media_viewfile.html
deplatformer_webapp/templates/uploader/: album_uploader.html  uploader.html
deplatformer_webapp/views/: facebook_views.py  filecoin_views.py  media_views.py  upload_views.py  views.py
migrations/local/versions/: c59b91455b84_.py
migrations/versions/: c4c708835e3f_.py
