[tool.poetry]
name = "deplatformer-webapp"
version = "0.1.0"
description = "Flask webapp for the deplatformer platform"
authors = ["Deplatformer Team <info@deplatformer.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
bcrypt = "3.2.0"
blinker = "1.4"
cffi = "1.14.2"
click = "7.1.2"
cryptography = "3.1"
Deprecated = "1.2.10"
dnspython = "1.16.0"
email-validator = "1.1.1"
eventlet = "0.27.0"
Flask = "1.1.2"
Flask-Login = "0.5.0"
Flask-Mail = "0.9.1"
Flask-SocketIO = "4.3.1"
Flask-SQLAlchemy = "2.4.4"
Flask-User = "1.0.2.2"
Flask-WTF = "0.14.3"
ftfy = "5.8"
greenlet = "0.4.16"
grpcio = "1.30.0"
idna = "2.10"
itsdangerous = "1.1.0"
Jinja2 = "2.11.2"
MarkupSafe = "1.1.1"
monotonic = "1.5"
passlib = "1.7.2"
protobuf = "3.12.4"
pycparser = "2.20"
pygate-grpc = "0.0.11"
python-engineio = "3.13.2"
python-socketio = "4.6.0"
six = "1.15.0"
SQLAlchemy = "1.3.19"
wcwidth = "0.2.5"
Werkzeug = "1.0.1"
wrapt = "1.12.1"
WTForms = "2.3.3"
poetry-version = "^0.1.5"
Flask-Migrate = "^2.5.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
deplatformer = 'deplatformer_webapp.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
